# backpack-firmware

./: .gitignore  CMakeLists.txt  NOTE.md  README.md
app/backpack-uwb-node/: CMakeLists.txt  Kconfig  NOTE.txt  host_connection.cmake  prj.conf  prj_anchor.conf  uwblib.cmake
app/backpack-uwb-node/include/: dw_serial.h  port_mcu.h
app/backpack-uwb-node/include/dw1000/platform/: deca_spi.h  port_mcu.h
app/backpack-uwb-node/src/apps/anchor/: main.c
app/backpack-uwb-node/src/apps/anchor/uwb/: anchor.c
app/backpack-uwb-node/src/apps/tag/: positioning.c
app/backpack-uwb-node/src/apps/tag/uwb/: tag.c
app/backpack-uwb-node/src/dw1000/: dw1000_board.c
app/backpack-uwb-node/src/dw1000/platform/: deca_platform.c
app/backpack-uwb-node/src/os/: dev_storage.c
app/backpack-uwb-node/src/uwb/: uwb.c
app/backpack-uwb-node/src/zephyr_os/: dw_decawave.c  dw_msg_manager.c  dw_os.c  dw_serial.c  dw_storage.c
lib/host_connection/: CMakeLists.txt  README.md  gen_proto.py
lib/host_connection/projects/backpack/: hc_msg_code.h
lib/host_connection/projects/backpack/host_com/: backpack_host_com.c  backpack_host_com.h  ble_host_com.c  ble_host_com.h  collector_host_com.c  collector_host_com.h  ti_host_com.c  ti_host_com.h
lib/host_connection/projects/backpack/parser/algo/: algo_parser.c  algo_parser.h
lib/host_connection/projects/backpack/parser/backpack/: backpack_parser.c  backpack_parser.h
lib/host_connection/projects/backpack/parser/ble_central/: ble_central_parser.c  ble_central_parser.h
lib/host_connection/projects/backpack/parser/collector/: collector_parser.c  collector_parser.h
lib/host_connection/projects/backpack/parser/command/: cmd_ir_cam.c  cmd_parser.c  cmd_parser.h  cmd_rgb_cam.c
lib/host_connection/projects/backpack/parser/hw_log/: hw_log_parser.c  hw_log_parser.h
lib/host_connection/projects/backpack/parser/sensor/: navigation_parser.c  sensor_parser.c  sensor_parser.h  sensor_stimulation_parser.c
lib/host_connection/projects/backpack/parser/uwb_dev/: uwb_dev_parser.c  uwb_dev_parser.h
lib/host_connection/projects/backpack/port/: host_connection_port.c  host_connection_port.h  host_connection_ti_port.c
lib/host_connection/projects/backpack/proto/out_c/: algorithm.pb.c  algorithm.pb.h  backpack-config.pb.c  backpack-config.pb.h  backpack.pb.c  backpack.pb.h  ble-central.pb.c  ble-central.pb.h  collector.pb.c  collector.pb.h  command.pb.c  command.pb.h  file-transfer.pb.c  file-transfer.pb.h  hw_logger.pb.c  hw_logger.pb.h  log.pb.c  log.pb.h  navigation.pb.c  navigation.pb.h  sensor.pb.c  sensor.pb.h  stimulation.pb.c  stimulation.pb.h  uwb-anchor.pb.c  uwb-anchor.pb.h  uwb-dev-config.pb.c  uwb-dev-config.pb.h  uwb-dev.pb.c  uwb-dev.pb.h
lib/host_connection/projects/backpack/proto/proto_definition/: algorithm.proto  backpack-config.proto  backpack.proto  ble-central.proto  collector.proto  command.proto  file-transfer.proto  hw_logger.proto  log.proto  navigation.proto  sensor.proto  stimulation.proto  uwb-dev-config.proto  uwb-dev.proto
lib/host_connection/source/file_transfer/: file_transfer.c  file_transfer.h  hwlog_ft_file.c  ir_image_ft_file.c  rgb_image_ft_file.c
lib/host_connection/source/host_connection/: host_connection.c  host_connection.h
lib/host_connection/source/packet/: packet.c  packet.h
lib/host_connection/source/proto_utilities/: proto_utilities.c  proto_utilities.h
lib/host_connection/source/tlv/: crc32.c  crc32.h  sys_tlv_code.c
lib/host_connection/third_parties/protobuf/nanopb/nanopb-0.4.7-windows-x86/: AUTHORS.txt  BUILD.bazel  CHANGELOG.txt  CMakeLists.txt  Package.swift  README.md  WORKSPACE  build.py  conanfile.py  library.json
lib/host_connection/third_parties/protobuf/nanopb/nanopb-0.4.7-windows-x86/conan-wrapper/: CMakeLists.txt
lib/host_connection/third_parties/protobuf/nanopb/nanopb-0.4.7-windows-x86/docs/: Makefile  bazel_build.md  concepts.md  index.md  lsr.css  migration.md  (+3 more)
lib/uwblib/: CMakeLists.txt  README.md  uwblib.cmake
lib/uwblib/application/: application_definitions.h  lib.h
lib/uwblib/application/app/: app_main.c  app_main.h  app_monitor.c  app_monitor.h  app_state.c  app_state.h  timestamp.c  timestamp.h
lib/uwblib/application/debug/: system_dbg.c  system_dbg.h
lib/uwblib/application/dev_config/: dev_cfg.c  dev_cfg.h  instance_config.c  instance_config.h
lib/uwblib/application/distance/: distance.c  distance.h
lib/uwblib/application/event/: uwb_event.c  uwb_event.h
lib/uwblib/application/exchange/: host_msg.c  host_msg.h
lib/uwblib/application/instance/: instance.c  instance.h  instance_utilities.c  instance_utilities.h
lib/uwblib/application/location_engine/: location_engine.c  location_engine.h  location_smoothing.c  location_smoothing.h  location_test.c
lib/uwblib/application/main/: dw_main.c  dw_main.c.bk  dw_main.h
lib/uwblib/application/network/: discovery.c  discovery.h  net_node.c  net_node.h  network.c  network.h  network_mac.c  network_mac.h  network_packet.c  network_packet.h
lib/uwblib/application/power/: tx_power.c  tx_power.h
lib/uwblib/application/tdma/: tdma_handler.c  tdma_handler.h
lib/uwblib/application/test/: dev_test.c  dev_test.h  ranging_test.c  ranging_test.h
lib/uwblib/application/twr/: twr_main.c  twr_main.h  twr_send.c  twr_send.h
lib/uwblib/application/uwb_dev/: instance_calib.c  uwb_dev_driver.c  uwb_dev_driver.h  uwb_dev_isr.c  uwb_dev_isr.h  uwb_dev_setting.c  uwb_dev_setting.h  uwb_transfer.c  uwb_transfer.h
lib/uwblib/decadriver/: deca_device.c  deca_device_api.h  deca_param_types.h  deca_regs.h  deca_types.h  deca_version.h
lib/uwblib/device/: uwb_config.c  uwb_config.h
lib/uwblib/device/decawave/: decawave_driver.c  decawave_driver.h
lib/uwblib/device/dw1000/: dw1000_driver.c  dw1000_driver.h
lib/uwblib/host_com/: host_com.c  host_com.h  host_com_msg.c  host_com_msg.h  host_com_task.c  host_com_task.h
lib/uwblib/platform/: dev_mem.h  dev_storage.h
lib/uwblib/platform/apollo3/: dev_storage.c  port_mcu.h
lib/uwblib/platform/dw1001/: deca_spi.h  dev_storage.c  port_mcu.c  port_mcu.h  port_serial.c  systick.c
(+324 files in other folders)
